--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="title_activity_main2">MainActivity2</string>
+    <string name="home">Home</string>
+    <string name="favorites">Favorites</string>
+    <string name="myPage">MyPage</string>
 </resources>
